fix(e-ink): make series title visible

--- a/Native Themes/E-Ink/e-ink.css
+++ b/Native Themes/E-Ink/e-ink.css
@@ -196,6 +196,10 @@
     --popover-bg-color: lightgrey;
     --popover-border-color: lightgrey;
 
+    /* Series Detail */
+    --detail-title-color: black;
+    --detail-subtitle-color: darkgrey;
+
     /* Search */
     --search-result-text-lite-color: rgba(0,0,0,1);
 
